--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/language-server": "^2.5.3",
     "@astrojs/tailwind": "^5.0.3",
     "astro": "^4.0.4",
+    "motion": "^10.16.4",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
   },
