Updated dependencies + add lenis scroll

--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.3.2",
-    "@astrojs/language-server": "^2.5.3",
-    "@astrojs/tailwind": "^5.0.3",
-    "astro": "^4.0.4",
+    "@astrojs/check": "^0.3.4",
+    "@astrojs/language-server": "^2.5.5",
+    "@astrojs/tailwind": "^5.1.0",
+    "@studio-freight/lenis": "^1.0.33",
+    "astro": "^4.0.8",
     "motion": "^10.16.4",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
     "prettier": "^3.1.1",
-    "prettier-plugin-astro": "^0.12.2",
-    "prettier-plugin-tailwindcss": "^0.5.9"
+    "prettier-plugin-astro": "^0.12.3",
+    "prettier-plugin-tailwindcss": "^0.5.10"
   }
 }
