--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@studio-freight/lenis": "^1.0.33",
     "astro": "^4.0.8",
     "motion": "^10.16.4",
+    "sharp": "^0.33.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   },
